<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tv_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/tv_registro"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_num_documento"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:hint="@string/txt_num_documento"
        android:inputType="text|number"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_apellido"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:hint="@string/txt_apellido"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:hint="@string/txt_telefono"
        android:inputType="text|number"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:baselineAligned="false"
        android:hint="@string/txt_correo"
        android:inputType="textEmailAddress"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@color/teal_700"
        android:text="@string/btn_registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="194dp"
        android:layout_height="115dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/regitro"
        app:layout_constraintBottom_toTopOf="@+id/txt_num_documento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>