<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="232dp"
        android:layout_height="156dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/login"
        app:layout_constraintBottom_toTopOf="@+id/txt_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/txt_usuario"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="310dp"
        android:layout_height="55dp"
        android:layout_marginBottom="28dp"
        android:baselineAligned="false"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_iniciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:background="@color/teal_700"
        android:text="@string/btn_iniciar"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginBottom="56dp"
        android:background="@color/teal_700"
        android:text="@string/btn_registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="231dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_login"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

</android.support.constraint.ConstraintLayout>